# boids-gpgpu

./: .gitignore  CMakeLists.txt  CMakeSettings.json  contexts.ixx  main.cpp  physics_buffer.ixx  shader_program.ixx  vcpkg.json  vertex_array.ixx  vertex_buffer.ixx
shaders/: debug.frag  debug.vert  debug_color.frag  debug_velocities.vert  debug_wall_corners.vert  fNoise.h  interactions.comp  move.comp  sPhysics.h  shader.frag  shader.vert  uBoidSight.h  uCamera.h  uLights.h  uPhysics.h  uSceneWalls.h  uTime.h
